# testing001

kauriac001/: README.md  root.hcl
kauriac001/abanca-mistral-ai-suite/: backend.tf  main.tf  mistral.tf  provider.tf  terragrunt.hcl  variables.tf  versions.tf
kauriac001/abanca-mistral-ai-suite/configs/xxe/: values.tfvars
kauriac001/abanca-mistral-ai-suite/configs/xxt/: values.tfvars
kauriac001/terraform-mistralaisuite-gcp-v0.1.3/: README.md  main.tf  outputs.tf  values-gke-autopilot.yaml  values.yaml  variables.tf  versions.tf
kauriac001/terraform-mistralaisuite-gcp-v0.1.3/examples/: helm-example-e2e-deployment.yaml  tf-example-database-only.tfvars  tf-example-default.tfvars  tf-example-e2e-deployment.tfvars  tf-example-nfs-only.tfvars  tf-example-storage-only.tfvars
kauriac001/terraform-mistralaisuite-gcp-v0.1.3/modules/buckets/: README.md  main.tf  outputs.tf  variables.tf
kauriac001/terraform-mistralaisuite-gcp-v0.1.3/modules/calculator/: README.md  main.py  main.tf  outputs.tf  provider.py  provider_aws.py  provider_azure.py  provider_gcp.py  pyproject.toml  run.sh  variables.tf
kauriac001/terraform-mistralaisuite-gcp-v0.1.3/modules/cert_manager/: README.md  main.tf  outputs.tf  variables.tf
kauriac001/terraform-mistralaisuite-gcp-v0.1.3/modules/cluster/: README.md  main.tf  outputs.tf  variables.tf
kauriac001/terraform-mistralaisuite-gcp-v0.1.3/modules/cluster_addons/: main.tf  variables.tf
kauriac001/terraform-mistralaisuite-gcp-v0.1.3/modules/cluster_storage/: README.md  main.tf  outputs.tf  variables.tf
(+28 files in other folders)
